@@ -1,5 +1,8 @@
 Changes for APR 1.3.0
 
+  *) Fix apr_file_write() infinite loop on write failure for buffered
+     files.  [Erik Huelsmann <ehuels@gmail.com>]
+
   *) Add %pm support to apr_snprintf() for printing the error string
      corresponding to an apr_status_t value.  [Joe Orton]
 
